@@ -104,6 +104,15 @@ deploy scripts. Useful for an existing database that is being converted to
 Sqitch, and you need to log changes as deployed because they have been
 deployed by other means in the past.
 
+=item C<--lock-timeout>
+
+  sqitch checkout --lock-timeout 600
+
+Set the number of seconds for Sqitch to wait to get an exclusive advisory
+lock on the target database, for engines that support such a lock. This
+lock prevents other instances of Sqitch from working on the target at the
+same time, but prevents no other database activity. Defaults to 60.
+
 =item C<-y>
 
 Disable the prompt that normally asks whether or not to execute the revert.
