@@ -44,6 +44,10 @@ Revision history for Perl extension App::Sqitch
        reverted, as that pattern led to failures when multiple instances of
        Sqitch were working at once. Thanks to Neil Mayhew for the report
        (#579).
+     - Added the --lock-timeout option to the deploy, revert, rebase, and
+       checkout commands, to allow for shorter or longer times to wait for an
+       exclusive target database advisory lock for engines that support it.
+       Defaults to 60 seconds.
      - Fixed the behavior of the plan command's `--max-count` option when used
        with `--reverse` to show the proper items. Thanks to Adrian Klaver for
        the report (#517).
